Resolves: fdo#69440 only ask for tabcontrol in builder dialogs

Change-Id: I6001f8921f3b90283525355b0094c4377c42c663